syntax = "proto3";

package farm.health_management;

service HealthManagement {
  rpc ReportHealth(stream HealthReport) returns (HealthSummary) {}  // Client streaming for health reporting

}

// Message for reporting health status of a farm animal
message HealthReport {
  string reportId = 1;           // Report ID   
  string type = 2;               // Type of animal
  string animalId = 3;            // ID number of the animal
  string healthDescription = 4;  // Detailed health report   
}

// Summary response for ReportHealth, includes a summary of all reports received
message HealthSummary {
  repeated ReportInfo reports = 1;
}
message ReportInfo {
  int32 reportId = 1;  // Report number as integer
  string details = 2;  // Details / summary of the report
}

